--- a/Programmering Eksamensprojekt/Pages/Home.razor
+++ b/Programmering Eksamensprojekt/Pages/Home.razor
@@ -44,14 +44,12 @@
 <p>@pString</p>
 <p>@p1String</p>
 <p>@p2String</p>
-<p>@p3String</p>
+<p>@((MarkupString)p3String)</p>
 <p>@p4String</p>
 <p>@p5String</p>
 <p>@p6String</p>
 <p>@p7String</p>
-<div @key="@p8String">
-    @p8String
-</div>
+<div>@EquationsWithLineBreak</div>
 <p>@p9String</p>
 <p>@p10String</p>
 
@@ -68,6 +66,7 @@
     string p8String = "";
     string p9String = "";
     string p10String = "";
+    MarkupString EquationsWithLineBreak = new();
 
     // Data structures for calculations and UI interactions
     List<List<string>> unitGroups = new();
@@ -214,8 +213,8 @@
             List<String> Formler = numberToName[key];
             FinalEquationsName.AddRange(Formler);
         }
-        //p8String = Succes ? string.Join(" ", FinalEquations.Select(eq => "\\(" + $"{string.Join(", ", eq.Select(item => numberToName.ContainsKey(item) ? string.Join("/", numberToName[item]) : item))}" + "\\)")) : "";
-        p8String = string.Join(",", FinalEquationsName.Distinct().ToList().Select(eq => "\\(" + $"{eq}" + "\\)").ToList());
+        p8String = string.Join("<br><br>", FinalEquationsName.Distinct().ToList().Select(eq => "\\(" + $"{eq}" + "\\)").ToList());
+        EquationsWithLineBreak = (MarkupString)p8String;
         await InvokeAsync(StateHasChanged);
         await Task.Delay(100);
         await CallMathJax();
@@ -247,6 +246,7 @@
             .Where(group => new HashSet<string>(group).Contains(Output))
             .Except(AlreadyFound)
             .ToList();
+        unitGroups = unitGroups.Where(group => group.Count > 1).ToList();
 
         if (groupsWithOutput.Count == 0)
         {
@@ -327,6 +327,7 @@
                 HSMissingVariables.UnionWith(HSInput);
                 HSMissingVariables.ExceptWith(HSInput);
                 AlreadyFound.Add(groupsWithOutput[i]);
+                //AlreadyFound.AddRange(unitGroups.Where(group => group.Count == 1).ToList());
 
                 foreach (string variable in HSMissingVariables)
                 {
