--- a/Programmering Eksamensprojekt/Pages/Home.razor
+++ b/Programmering Eksamensprojekt/Pages/Home.razor
@@ -44,12 +44,14 @@
 <p>@pString</p>
 <p>@p1String</p>
 <p>@p2String</p>
-<p>@((MarkupString)p3String)</p>
+<p>@p3String</p>
 <p>@p4String</p>
 <p>@p5String</p>
 <p>@p6String</p>
 <p>@p7String</p>
-<div>@EquationsWithLineBreak</div>
+<div @key="@EquationsWithLineBreak">
+    @EquationsWithLineBreak
+</div>
 <p>@p9String</p>
 <p>@p10String</p>
 
@@ -222,7 +224,17 @@
 
     private async Task CallMathJax()
     {
+        try{
         if (mathJaxRenderer != null) { await mathJaxRenderer.RenderMath(); }
+        }
+        catch (JSException ex)
+        {
+            Console.Error.WriteLine($"JavaScript error: {ex.Message}");
+        }
+        catch (Exception ex)
+        {
+            Console.Error.WriteLine($"Unexpected error: {ex.Message}");
+        }
     }
 
     private bool Search(string Output, HashSet<string> HSInput, List<List<string>> AlreadyFound, List<List<string>> FinalEquations, HashSet<string> requiredUnits)
